--- a/OOP 面向对象.ipynb
+++ b/OOP 面向对象.ipynb
@@ -225,6 +225,242 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 访问类的属性\n",
+    "- 在类里面如果强制访问类的属性， 则需要使用__class__ (注意前后两个下划线)\n",
+    "- 类方法：定义类的方法的时候， 没有self参数\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello! xiaoming， my age is 19 !\n",
+      "help me！, my name is xiaoming, my age is 19 !\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person():\n",
+    "    name = \"xiaoming\"\n",
+    "    age = 19\n",
+    "    \n",
+    "    # 实例方法\n",
+    "    def sayHello(self):\n",
+    "        print(\"hello! {}， my age is {} !\".format(self.name, self.age))\n",
+    "        return None\n",
+    "    \n",
+    "    # 类方法\n",
+    "    def saySos():\n",
+    "        # 类方法中 不允许访问实例的任何类容\n",
+    "        # 如果访问类的内容， 注意可以使用两种方法 用类名访问或__class__\n",
+    "        print(\"help me！, my name is {}, my age is {} !\".format(Person.name, __class__.age))\n",
+    "        return None\n",
+    "    \n",
+    "p = Person()\n",
+    "# 调用实例方法\n",
+    "p.sayHello()\n",
+    "\n",
+    "# 调用类方法 直接用类名调用\n",
+    "Person.saySos()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 类的实例化(构造函数)\n",
+    "- 类在实例化的时候，执行一些基础的初始化的工作\n",
+    "- 使用特殊的名称和写法\n",
+    "- 在实例化的时候自动默认执行\n",
+    "    - 要求 第一个参数必须有， 一般推荐self\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我是构造函数\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student3():\n",
+    "    name = \"NoName\"\n",
+    "    age = 0\n",
+    "\n",
+    "    # 构造函数名称固定， 写法相对固定\n",
+    "    def __init__(self):\n",
+    "        print(\"我是构造函数\")\n",
+    "    \n",
+    "s = Student3()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 面向对象的三大特征\n",
+    "- 继承\n",
+    "- 封装\n",
+    "- 多态\n",
+    "\n",
+    "## 继承\n",
+    "- 子类可以使用父类定义的类容或方法等\n",
+    "- 继承的实现\n",
+    "    - 父类，基类、被继承的类 Base Class、 Super Class\n",
+    "    - 子类：有继承行为的类\n",
+    "    \n",
+    "    - 所有的类必须有一个父类\n",
+    "        - 如果没有，则默认是object 的子类\n",
+    "        - 子类可以多个父类\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 默认继承object \n",
+    "class Person():\n",
+    "    pass\n",
+    "\n",
+    "class Person2(object):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "老师的姓名：NoName, 年龄：0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person():\n",
+    "    name = \"NoName\"\n",
+    "    age = 0\n",
+    "    \n",
+    "# 父类写在子类定义的括号里\n",
+    "class Teacher(Person):\n",
+    "    pass\n",
+    "\n",
+    "t = Teacher()\n",
+    "print(\"老师的姓名：{}, 年龄：{}\".format(t.name, t.age))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "飞呀飞\n",
+      "NoName\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Bird():\n",
+    "    fly = \"Yes, we can\"\n",
+    "    def flying(self):\n",
+    "        print(\"飞呀飞\")\n",
+    "    \n",
+    "class BirdMan(Bird, Person):\n",
+    "    pass\n",
+    "\n",
+    "bm = BirdMan()\n",
+    "bm.flying()\n",
+    "print(bm.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# issubclass 检测是否是子类\n",
+    "- 可以检测两个类的父子关系\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(issubclass(BirdMan, Person))\n",
+    "print(issubclass(BirdMan, Bird))\n",
+    "print(issubclass(BirdMan, Teacher))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 构造函数的继承\n",
+    "- 构造函数是默认继承，子类如果没有构造函数， 则自动调用父类的构造函数\n",
+    "- 一旦子类定义了构造函数，则不再自动调用父类的构造函数\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:小明, age:20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person():\n",
+    "    def __init__(self, name, age):\n",
+    "        print(\"name:{}, age:{}\".format(name, age))\n",
+    "    \n",
+    "class Teacher(Person):\n",
+    "    pass\n",
+    "\n",
+    "t = Teacher(\"小明\", 20)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
